--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
         "lodash": "^4.17.19",
         "postcss-import": "^12.0.1",
         "resolve-url-loader": "^3.1.0",
-        "tailwindcss": "^1.8.0"
+        "sass": "^1.29.0",
+        "sass-loader": "^8.0.2",
+        "tailwindcss": "^1.8.0",
+        "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
         "simplemde": "^1.11.2"
