--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "simplemde": "^1.11.2"
+        "simplemde": "^1.11.2",
+        "vue": "^2.6.12"
     }
 }
